--- a/highscores.html
+++ b/highscores.html
@@ -14,7 +14,7 @@
         <h1 id="finalScore">High Scores</h1>
         <ul id="highScoresList"></ul>
          <!-- we'll use js to populate this list -->
-        <a class="btn" href="/">Go Home</a>
+        <a class="btn" href="index.html">Go Home</a>
       </div>
     </div>
     <script src="highscores.js"></script>
