--- a/end.html
+++ b/end.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <div class="container">>>>>
+    <div class="container">
       <div id="end" class="flex-center flex-column">
         <p class="fscore">Final Score</p>
         <h1 id="finalScore"></h1>
